# bmstu

./: .gitmodules  CONTRIBUTING.md  README.md
sem1-2-cource1/: Lab2.3 Forwardlist.cpp  Lab2.3 Forwardlist.hpp  Lab2.3 main.cpp  QUEUE-CHEAT-DOC.cpp  RK-25-27-AP-Task.cpp  SEM-25-AP-1-Complex.cpp  SEM-25-AP-1-Complex.hpp  SEM-25-AP-1.cpp  lab13-5-0.cpp  lab13-5.cpp  lab13:2-5.cpp  tree-lab.cpp  ver-11-april.cpp  ver-11-may-solution.cpp  ver-11-may.cpp  ver-11:2-april.cpp  ver-11:2-may.cpp  virtual.cpp  Деталь5.ipt  Корпус.ipt  Основание.ipt  Пирамида 18.idw  Пирамида.idw  Пирамида.ipt  Пирамида16.idw  Пирамида18.idw  Призма 18.idw  Призма.idw  Призма.ipt  Сборка1.iam  Сборка1.idw  Шар.idw  Шар.ipt  винт.ipt  крышка.ipt  модель5-чертеж-с-невидимыми-линиями.idw  модель5-чертеж.idw
sem1-2-cource1/FList-master/: FList.cpp  FList.hpp  main.cpp
sem1-2-cource1/QUEUE/QUEUE/: Queue.cpp  Queue.hpp  SOUNDS_GOOD__DOESNT_WORK.hpp  main.cpp
sem1-2-cource1/QUEUE/QUEUE.xcodeproj/: project.pbxproj
sem1-2-cource1/RK-25-27-QUEUE-master/: README.md
sem1-2-cource1/RK-25-27-QUEUE-master/main/: main.cpp
sem1-2-cource1/Some-strange-labs-i-guess/lapki-master/: 51.c  52.c  53.c  6.0  6.1  6.1(2)  lab2.1  lab2.2
sem1-2-cource1/bstree--master/: CMakeLists.txt  EXAMPLE.txt  HowToBuild.md  README.md
sem1-2-cource1/bstree--master/bm/: bm-insert-remove.cpp  bm-plain-print.cpp  bm-pr--dir-rev.cpp  bm-save.cpp
sem1-2-cource1/bstree--master/examples/: example4.cpp  example6.cpp  example7.cpp  example8.cpp
sem1-2-cource1/bstree--master/include/: BSTree.hpp
sem1-2-cource1/bstree--master/sources/: BSTree.cpp  main.cpp
sem1-2-cource1/bstree--master/tests/: test.cpp
sem1-2-cource1/matrix/: main.cpp
sem1-2-cource1/vector_example-master/sources/: vector.cpp
sem1-2-cource1/ver-11-may-solution/: readme.txt
sem3-cource2/algorithmic-language/: README.md
sem3-cource2/algorithmic-languages/: ptr.hpp  sem2.md
sem3-cource2/algorithmic-languages/json-parser-master/: READ.md
sem3-cource2/algorithmic-languages/lab-05-filesystem-yokkidack-yokkidack/: CMakeLists.txt  README.md
sem3-cource2/algorithmic-languages/lab-05-filesystem-yokkidack-yokkidack/sources/: source.cpp
sem3-cource2/algorithmic-languages/lab-2-cache-yokkidack-master/: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
sem3-cource2/algorithmic-languages/lab-2-cache-yokkidack-master/imp/: README.md
sem3-cource2/algorithmic-languages/lab-2-cache-yokkidack-master/include/: bypass.hpp
sem3-cource2/algorithmic-languages/lab-2-cache-yokkidack-master/sources/: test-one-dir-bypass.cpp  test-three-rand-bypass.cpp  test-two-reverse-bypass.cpp
sem3-cource2/algorithmic-languages/lab-cashe/: main.cpp  sysinfo.txt  test-one-dir-bypass.cpp  test-three-rand-bypass.cpp  test-two-reverse-bypass.cpp  traaaaaaa.md  unmoded-data.txt
sem3-cource2/algorithmic-languages/lab02-2-master/: .travis.yml  CMakeLists.txt  test.cpp.notyet
sem3-cource2/algorithmic-languages/lab02-2-master/sources/: bypass.hpp  main.cpp  res_.txt  test-one-dir-bypass.cpp  test-three-rand-bypass.cpp  test-two-reverse-bypass.cpp
sem3-cource2/eltech/: lection-transcript.md  questions-and-answers.md
sem3-cource2/optimisation-methods/: README.md  all-she-could-ask.md  ga.cpp  genetic_algorithms.hpp  lab6.md  main-3.cpp  mo-5  mo-5.cpp  output-3-1.md  output-3.md  output-5.md  output.txt  questions-and-ansvers.md  questions-and-answers.md  simple_ga_input.txt
sem4-course2/el-tech-and-schemes/: README.md  questions-2-nd-rk.md  some-notes.md  task-1.txt
sem4-course2/managment-theory/lab3-4/: lab031.m  lab3.m  lab4.m  lab4.m~  model1.m  оту3.pages
sem4-course2/managment-theory/lab5-6/: lab5-fig1.fig
sem4-course2/mat-logic-and-algorithm-theory/: README.md  Shannon_func_estimation.md  all_turing_mashines.md  dificulty_classes.md  rk-2-q-n-a.md
sem4-course2/physics/: Lection1.md  README.md  Untitled.m  graph-l-e.tex
sem4-course2/sociology/: README.md
sem4-course2/statistics-and-probability-theory/: README.md
sem5-course3/Alghorithms-and-Data-Structures/: Homework_sem1.md  Sem2.md  Sem2_prep.md
sem5-course3/Alghorithms-and-Data-Structures/homework/: Homework_sem1.md  Homework_sem2.md
sem5-course3/Alghorithms-and-Data-Structures/prep/: Sem3_prep.md
sem5-course3/why-do-i-even-do-english/: sem2.md  sem3.md
special-courses/Industrial-development/: AUTHORS  README.md  id_1.md  id_10.md  id_11.md  id_12.md  id_2.md  id_3.md  id_4.md  id_6.md  id_8.md  id_9.md  notes_id3-4.md  notes_id7.md  notes_id8.md  notes_id_2.md  reading-list.md
template/: README.md
(+16 files in other folders)
